# tic-tac-toe-pygame

./: .gitignore  README.md  pyproject.toml
tic_tac_toe_pygame/: config.py  event.py  game.py
tic_tac_toe_pygame/handlers/: event.py
