[tool.poetry]
name = "tic-tac-toe-pygame"
version = "0.2.0"
description = "A Python implementation of the Tic-Tac-Toe game using Pygame."
authors = ["Giansimone Perrino <hello@giansimone.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
